<resources>
    <string name="app_name">Muslim Pro</string>
    <string name="aplication_admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="intersianal_ad_unit_id">ca-app-pub-8367668832710679/4315432765</string>
    <string name="pub_id">pub-8367668832710679</string>
    <string name="action_add_zekr">إضافة ذكر</string>
    <string name="zeker_subhan">سبحان الله</string>
    <string name="app"> تلاوات القرأن كاملة</string>
    <string name="request_draw_message">الرجاء السماح بالظهور فوق التطبيقات لإظهار الأذكار التلقائية</string>
    <string name="cat_fiqh">كتاب الفقه</string>
    <string name="cat_library"> المكتبة الاسلامية</string>
    <string name="search_title">البحث</string>
    <string-array name="Departments">
        <item>shatri</item>
        <item>ahmad_huth</item>
        <item>hawashi</item>
        <item>trabulsi</item>
        <item>ajm</item>
        <item>trablsi</item>
        <item>saud</item>
        <item>saber</item>
        <item>Aamer</item>
        <item>ahmad_nu</item>
        <item>akil</item>
        <item>akrm</item>
        <item>akdr</item>
        <item>IbrahemSadan</item>
        <item>abkr</item>
        <item>jbreen</item>
        <item>jormy</item>
        <item>ibrahim_dosri_warsh</item>
        <item>3siri</item>
        <item>zamri</item>
        <item>3zazi</item>
        <item>dokali</item>
        <item>alzain</item>
        <item>omran</item>
        <item>koshi</item>
        <item>fateh</item>
        <item>qari</item>
        <item>twfeeq</item>
        <item>jamal</item>
        <item>jaman</item>
        <item>hatem</item>
        <item>qht</item>
        <item>mohna</item>
        <item>kafi</item>
        <item>tnjy</item>
        <item>hamza</item>
        <item>ifrad</item>
        <item>zaki</item>
        <item>sami_dosr</item>
        <item>s_gmd</item>
        <item>shur</item>
        <item>shl</item>
        <item>sayed</item>
        <item>taher</item>
        <item>hkm</item>
        <item>sahood</item>
        <item>s_bud</item>
        <item>salah_hashim_m</item>
        <item>bu_khtr</item>
        <item>tareq</item>
        <item>a_klb</item>
        <item>ryan</item>
        <item>thubti</item>
        <item>bari</item>
        <item>bari_molm</item>
        <item>basit</item>
        <item>basit_warsh</item>
        <item>basit_mjwd</item>
        <item>sds</item>
        <item>soufi_klf</item>
        <item>soufi</item>
        <item>a_ahmed</item>
        <item>brmi</item>
        <item>Abdullahk</item>
        <item>mtrod</item>
        <item>bsfr</item>
        <item>kyat</item>
        <item>jhn</item>
        <item>mohsin_harthi</item>
        <item>obk</item>
        <item>qasm</item>
        <item>kanakeri</item>
        <item>wdod</item>
        <item>abo_hashim</item>
        <item>huthifi_qalon</item>
        <item>hthfi</item>
        <item>a_jbr</item>
        <item>hajjaj</item>
        <item>hafz</item>
        <item>frs_a</item>
        <item>lafi</item>
        <item>zaml</item>
        <item>shaibat</item>
        <item>maher_m</item>
        <item>maher</item>
        <item>shaksh</item>
        <item>ayyub</item>
        <item>braak</item>
        <item>tblawi</item>
        <item>mhsny</item>
        <item>monshed</item>
        <item>jbrl</item>
        <item>rashad</item>
        <item>shah</item>
        <item>minsh</item>
        <item>minsh_mjwd</item>
        <item>abdullah_dori</item>
        <item>khan</item>
        <item>mrifai</item>
        <item>sheimy</item>
        <item>husr</item>
        <item>bna_mjwd</item>
        <item>afs</item>
        <item>mustafa</item>
        <item>lahoni</item>
        <item>ra3ad</item>
        <item>harthi</item>
        <item>muftah_thakwan</item>
        <item>bilal</item>
        <item>qtm</item>
        <item>nabil</item>
        <item>namh</item>
        <item>hani</item>
        <item>waleed</item>
        <item>yasser</item>
        <item>qurashi</item>
        <item>mzroyee</item>
        <item>yahya</item>
        <item>yousef</item>
        <item>noah</item>
        <item>shatri</item>
        <item>ahmad_huth</item>
        <item>hawashi</item>
        <item>trabulsi</item>
        <item>ajm</item>
        <item>trablsi</item>
        <item>saud</item>
        <item>saber</item>
        <item>Aamer</item>
        <item>ahmad_nu</item>
        <item>akil</item>
        <item>akrm</item>
        <item>akdr</item>
        <item>IbrahemSadan</item>
        <item>abkr</item>
        <item>jbreen</item>
        <item>jormy</item>
        <item>ibrahim_dosri_warsh</item>
        <item>3siri</item>
        <item>zamri</item>
        <item>3zazi</item>
        <item>dokali</item>
        <item>alzain</item>
        <item>omran</item>
        <item>koshi</item>
        <item>fateh</item>
        <item>qari</item>
        <item>twfeeq</item>
        <item>jamal</item>
        <item>jaman</item>
        <item>hatem</item>
        <item>qht</item>
        <item>mohna</item>
        <item>kafi</item>
        <item>tnjy</item>
        <item>hamza</item>
        <item>ifrad</item>
        <item>zaki</item>
        <item>sami_dosr</item>
        <item>s_gmd</item>
        <item>shur</item>
        <item>shl</item>
        <item>sayed</item>
        <item>taher</item>
        <item>hkm</item>
        <item>sahood</item>
        <item>s_bud</item>
        <item>salah_hashim_m</item>
        <item>bu_khtr</item>
        <item>tareq</item>
        <item>a_klb</item>
        <item>ryan</item>
        <item>thubti</item>
        <item>bari</item>
        <item>bari_molm</item>
        <item>basit</item>
        <item>basit_warsh</item>
        <item>basit_mjwd</item>
        <item>sds</item>
        <item>soufi_klf</item>
        <item>soufi</item>
        <item>a_ahmed</item>
        <item>brmi</item>
        <item>Abdullahk</item>
        <item>mtrod</item>
        <item>bsfr</item>
        <item>kyat</item>
        <item>jhn</item>
        <item>mohsin_harthi</item>
        <item>obk</item>
        <item>qasm</item>
        <item>kanakeri</item>
        <item>wdod</item>
        <item>abo_hashim</item>
        <item>huthifi_qalon</item>
        <item>hthfi</item>
        <item>a_jbr</item>
        <item>hajjaj</item>
        <item>hafz</item>
        <item>frs_a</item>
        <item>lafi</item>
        <item>zaml</item>
        <item>shaibat</item>
        <item>maher_m</item>
        <item>maher</item>
        <item>shaksh</item>
        <item>ayyub</item>
        <item>braak</item>
        <item>tblawi</item>
        <item>mhsny</item>
        <item>monshed</item>
        <item>jbrl</item>
        <item>rashad</item>
        <item>shah</item>
        <item>minsh</item>
        <item>minsh_mjwd</item>
        <item>abdullah_dori</item>
        <item>khan</item>
        <item>mrifai</item>
        <item>sheimy</item>
        <item>husr</item>
        <item>bna_mjwd</item>
        <item>afs</item>
        <item>mustafa</item>
        <item>lahoni</item>
        <item>ra3ad</item>
        <item>harthi</item>
        <item>muftah_thakwan</item>
        <item>bilal</item>
        <item>qtm</item>
        <item>nabil</item>
        <item>namh</item>
        <item>hani</item>
        <item>waleed</item>
        <item>yasser</item>
        <item>qurashi</item>
        <item>mzroyee</item>
        <item>yahya</item>
        <item>yousef</item>
        <item>noah</item>
    </string-array>
    <string-array name="quranName">
        <item>الفاتحة</item>
        <item>البقرة</item>
        <item>ال عمران</item>
        <item>النساء</item>
        <item>المائدة</item>
        <item>الانعام</item>
        <item>الأعراف</item>
        <item>الأنفال</item>
        <item>التوبة</item>
        <item>يونس</item>
        <item>هود</item>
        <item>يوسف</item>
        <item>الرعد</item>
        <item>إبراهيم</item>
        <item>الحجر</item>
        <item>النحل</item>
        <item>الإسراء</item>
        <item>الكهف</item>
        <item>مريم</item>
        <item>طه</item>
        <item>الأنبياء</item>
        <item>الحج</item>
        <item>المؤمنون</item>
        <item>النّور</item>
        <item> الفرقان </item>
        <item> الشعراء </item>
        <item>النّمل</item>
        <item>القصص</item>
        <item>العنكبوت</item>
        <item>الرّوم</item>
        <item>لقمان</item>
        <item>السجدة</item>
        <item>الأحزاب</item>
        <item>سبأ</item>
        <item>فاطر</item>
        <item>يس</item>
        <item>الصافات</item>
        <item>ص</item>
        <item>الزمر</item>
        <item>غافر</item>
        <item>فصّلت</item>
        <item>الشورى</item>
        <item>الزخرف</item>
        <item>الدّخان</item>
        <item>الجاثية</item>
        <item>الأحقاف</item>
        <item>محمد</item>
        <item>الفتح</item>
        <item>الحجرات</item>
        <item>ق</item>
        <item>الذاريات</item>
        <item>الطور</item>
        <item>النجم</item>
        <item>القمر</item>
        <item>الرحمن</item>
        <item>الواقعة</item>
        <item>الحديد</item>
        <item>المجادلة</item>
        <item>الحشر</item>
        <item>الممتحنة</item>
        <item>الصف</item>
        <item>الجمعة</item>
        <item>المنافقون</item>
        <item>التغابن</item>
        <item>الطلاق</item>
        <item>التحريم</item>
        <item>الملك</item>
        <item>القلم</item>
        <item>الحاقة</item>
        <item>المعارج</item>
        <item>نوح</item>
        <item>الجن</item>
        <item>المزّمّل</item>
        <item>المدّثر</item>
        <item>القيامة</item>
        <item>الإنسان</item>
        <item>المرسلات</item>
        <item>النبأ</item>
        <item>النازعات</item>
        <item>عبس</item>
        <item>التكوير</item>
        <item>الإنفطار</item>
        <item>المطفّفين</item>
        <item>الإنشقاق</item>
        <item>البروج</item>
        <item>الطارق</item>
        <item>الأعلى</item>
        <item>الغاشية</item>
        <item>الفجر</item>
        <item>البلد</item>
        <item>الشمس</item>
        <item>الليل</item>
        <item>الضحى</item>
        <item>الشرح</item>
        <item>التين</item>
        <item>العلق</item>
        <item>القدر</item>
        <item>البينة</item>
        <item>الزلزلة</item>
        <item>العاديات</item>
        <item>القارعة</item>
        <item>التكاثر</item>
        <item>العصر</item>
        <item>الهمزة</item>
        <item>الفيل</item>
        <item>قريش</item>
        <item>الماعون</item>
        <item>الكوثر</item>
        <item>الكافرون</item>
        <item>النصر</item>
        <item>المسد</item>
        <item>الإخلاص</item>
        <item>الفلق</item>
        <item>النّاس</item>
    </string-array>
    <string name="cat_remind">ذكرني</string>
    <string name="remind_me">ذكرني كل:</string>
    <string name="remind_never">لا تذكرني</string>
    <string name="remind_30">30 دقيقة</string>
    <string name="remind_1">1 ساعة</string>
    <string name="remind_3">3 ساعات</string>
    <string name="remind_6">6 ساعات</string>
    <string name="cat_albukhari">صحيح البخاري</string>
    <string name="share_using">مشاركة بواسطة</string>
    <string name="fatwa_question">السؤال:</string>
    <string name="fatwa_answer">الجواب</string>
    <string name="cat_nawawiya_40">الأربعون النووية</string>
    <string name="enable_athan">تفعيل الأذان:</string>
    <string name="enable_athan_sound">تفعيل صوت الأذان مع الإشعارات</string>
    <string name="cat_prayer_times">مواقيت الصلاة</string>
    <string name="stories2">قصص وعبر</string>
    <string name="qissaanbiya">قصص الانبياء</string>
    <string name="qissasislamic">قصص اسلامية</string>
    <string name="qissassahaba">قصص الصحابة</string>
    <string name="mo3jizat">معجزات الانبياء</string>
    <string name="compass_dial" translatable="false">طلب البوصلة</string>
    <string name="compass_hands" translatable="false">أيدي البوصلة</string>
</resources>