<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools"
    android:background="@drawable/mybgdakarni"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"

        android:layout_marginRight="10dp"
        android:padding="@dimen/screen_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_me"
            android:textColor="@color/red"
            android:fontFamily="@font/the_sans"

            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/mywhite2"
            app:cardElevation="2dp">

        <RadioGroup
            android:id="@+id/rdg_time"
            android:gravity="right"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdb_0"
                style="@style/RadioRemind"
                android:text="@string/remind_never"
                android:fontFamily="@font/the_sans"
                />

            <RadioButton
                android:id="@+id/rdb_30"
                style="@style/RadioRemind"
                android:text="@string/remind_30"
                android:fontFamily="@font/the_sans"
                />

            <RadioButton
                android:id="@+id/rdb_1"
                style="@style/RadioRemind"
                android:fontFamily="@font/the_sans"

                android:text="@string/remind_1" />

            <RadioButton
                android:id="@+id/rdb_3"
                style="@style/RadioRemind"
                android:fontFamily="@font/the_sans"

                android:text="@string/remind_3" />

            <RadioButton
                android:id="@+id/rdb_6"
                style="@style/RadioRemind"
                android:fontFamily="@font/the_sans"

                android:text="@string/remind_6" />
        </RadioGroup>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/enable_athan"
            android:fontFamily="@font/the_sans"

            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/mywhite2"
            app:cardElevation="2dp">

        <CheckBox
            android:id="@+id/cbx_athan_sound"
            style="@style/HasibNafsakText"
            android:paddingBottom="15dp"
            android:gravity="right"
            android:fontFamily="@font/the_sans"

            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/enable_athan_sound" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>