<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_stories"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/mybgstory"
    tools:context=".Stories">

    <TextView
        android:text="@string/stories2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="40dp"
        android:fontFamily="@font/the_sans"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/st" />
    <View
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="3dp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
       >

        <Button
            android:text="@string/qissaanbiya"

            android:layout_width="150dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:fontFamily="@font/the_sans"

            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="8dp"
            android:textStyle="bold|italic"
            android:background="@drawable/a1"
            android:id="@+id/anbiyaa" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
    >

        <Button
            android:text="@string/qissassahaba"

            android:layout_width="150dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="8dp"
            android:fontFamily="@font/the_sans"
            android:textStyle="normal|bold|italic"
            android:background="@drawable/a2"
            android:id="@+id/sahaba" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"

        >

        <Button
            android:text="@string/qissasislamic"

            android:layout_width="150dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:fontFamily="@font/the_sans"

            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="8dp"
            android:textStyle="normal|bold|italic"
            android:background="@drawable/a3"
            android:id="@+id/aislamic" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"

    >

        <Button
            android:text="@string/mo3jizat"
            android:layout_width="150dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:fontFamily="@font/the_sans"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="8dp"
            android:textStyle="normal|bold|italic"
            android:background="@drawable/a4"
            android:id="@+id/mo3jizat" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            android:layout_weight="0"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</LinearLayout>
