<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybgawkat"
    tools:context=".CompassActivity">


    <TextView
        android:id="@+id/teks_atas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/the_sans"
        android:paddingTop="17dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/teks_bawah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/the_sans"
        android:paddingTop="117dp"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/main_image_dial"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_dial"
        android:src="@drawable/dial" />

    <ImageView
        android:id="@+id/main_image_qiblat"
        android:layout_width="37dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_hands"
        android:scaleType="fitXY"
        android:src="@drawable/jarum_qiblat" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>
